fixes to skills sections on mobile

--- a/src/css/_modules.scss
+++ b/src/css/_modules.scss
@@ -560,21 +560,31 @@
 .skill {
 	@include flexbox;
 	@include center-flex;
+	@include flex-column;
 	width: 100%;
 	margin-bottom: 30px;
+
+	@media(min-width: 800px) {
+		flex-direction: row;
+		width: 50%;
+		&--title {
+			width: 25%;
+			margin-right: 10px;
+			margin-left: 40px;
+		}
+
+		&--progress {
+			width: 400px;
+		}
+	}
 	&--title {
 		color: $l-white;
 		font-size: 1rem;
-		width: 25%;
-		margin-right: 10px;
-	}
-
-	@media (min-width: 800px){
-		width: 50%;
+		width: 100%;
 	}
 
 	&--progress {
-		width: 400px;
+		width: 100%;
 		height: 10px;
 		background-color: $m-skills-bar-black;
 		border-radius: 3px;
@@ -586,7 +596,6 @@
 		border-radius: 3px 0 0 3px;
 		height:100%;
 		width: 90%;
-		//animation: progress-bar 2s;
 	}
 }
 
@@ -600,6 +609,7 @@
 
 	&--title {
 		@include section-title;
+		text-align: center;
 	}
 }
 
@@ -614,6 +624,15 @@
 		}
 	}
 
+	&--darken {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		opacity: 0;
+		background-color: rgba(26, 30, 31, 0.85);
+		transition: all 400ms;
+	}
+
 	&--item {
 		@include flexbox;
 		position: relative;
@@ -621,6 +640,7 @@
 	}
 
 	&--item:hover {
+
 		.portfolio--title {
 			bottom: 0;
 		}
@@ -629,6 +649,10 @@
 			opacity: 1;
 			transform: translate(0,0);
 			transition: all 400ms;
+		}
+
+		.portfolio--darken {
+			opacity: 1;
 		}
 	}
 
