--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -54,7 +54,3 @@ $l-roboto: Roboto;
 	/* img */
 	$img-folder: "../../dist/img";
 
-/* @keyframes progress-bar {
-  from {width: 0%;}
-  to {}
-} */
